--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,34 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto Slab', sans-serif;
+  background-color: azure;
+}
+.profile-pic {
+  width: 200px;
+}
+.photo-wrapper {
+  background-color: white;
+}
+.section-divider {
+  padding: 5px 15px 0px;
+  border-bottom: 1px solid #F0F0F0;
+  margin-bottom: 15px;
+}
+.loc-wrapper {
+  text-align: center;
+  list-style: none;
+  padding-left: 0;
+}
+li {
+  margin-bottom: 10px;
+}
+.social-wrapper{
+  text-align: center;
+}
+.social-wrapper > a {
+  text-decoration: none;
+  color: #000000;
+  display: inline-block;
+  margin-right: 10px;
 }
