--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: 'Roboto Slab', sans-serif;
   background-color: azure;
+  text-align: justify;
+  font-size: 13px;
 }
 .profile-pic {
   width: 200px;
@@ -22,8 +24,12 @@ body {
   list-style: none;
   padding-left: 0;
 }
+ul {
+  margin-top: 10px;
+}
 li {
   margin-bottom: 10px;
+  line-height: 0.56;
 }
 .social-wrapper{
   text-align: center;
@@ -42,6 +48,9 @@ li {
   background-color: white;
   padding: 15px 15px;
 }
+.left-margin {
+  margin-left: 5px;
+}
 .right-margin {
   margin-right: 5px;
 }
@@ -50,8 +59,6 @@ li {
   display: inline-block;
 }
 p {
-  text-align: justify;
-  font-size: 13px;
   margin-top: 10px;
 }
 section {
@@ -59,4 +66,54 @@ section {
 }
 .sub-section {
   margin-bottom: 20px;
+}
+.skill-list {
+  padding-left: 0;
+  list-style: none;
+}
+.skill-list li {
+  display: inline-flex;
+  margin-left: 5px;
+}
+.list-item {
+  border: 1px solid #CCCCCC;
+  border-radius: 5px;
+  background-color:#F0F0F0;
+  padding: 5px;
+  font-weight: 700;
+}
+@keyframes heartbeat
+{
+  0%
+  {
+    transform: scale( .75 );
+  }
+  20%
+  {
+    transform: scale( 1 );
+  }
+  40%
+  {
+    transform: scale( .75 );
+  }
+  60%
+  {
+    transform: scale( 1 );
+  }
+  80%
+  {
+    transform: scale( .75 );
+  }
+  100%
+  {
+    transform: scale( .75 );
+  }
+}
+.heart {
+  display: inline-block;
+  animation: heartbeat 1s infinite;
+}
+.footer {
+  text-align: center;
+  font-size: 10px;
 }
