fixing for smaller and large devices

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,3 +6,11 @@
 .App .ContentWrapper {
     display: flex;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .App .ContentWrapper {
+        display: flex;
+        flex-direction: column;
+    }   
+}
