--- a/src/components/FooterAnimation/FooterAnimation.css
+++ b/src/components/FooterAnimation/FooterAnimation.css
@@ -51,3 +51,14 @@
     transform: scale( .75 );
   }
 }
+
+
+@media only screen and (max-width: 600px) {
+  .FooterAnimation .FooterPlaceholder {
+    display: none;
+  }
+
+  .FooterAnimation .FooterHeartAnimation {
+    justify-content: center;
+  }
+}
